# aviation-twitter-bots

./: Cargo.toml  README.md
migrations/: 0001_init.sql
src/: aero_api.rs  altitude_bot.rs  bot_service.rs  checker_job.rs  groundspeed_bot.rs  main.rs  utils.rs  x_api.rs
src/apis/: flightaware_aero.rs  mod.rs  x.rs
src/types/: auth_provider.rs  bot_type.rs  flight.rs  mod.rs  session.rs
