[package]
name = "earth-highest-aircraft"
version = "0.1.0"
edition = "2021"

[dependencies]
apalis = { version = "0.5.3", features = ["cron", "retry", "postgres"] }
chrono = { version = "0.4.38", features = ["serde", "clock"] }
serde = { version = "1.0.203", features = ["derive"] }
shuttle-runtime = "0.46.0"
shuttle-shared-db = { version = "0.46.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio-native-tls", "postgres"] }
tower = "0.4.13"
